syntax = "proto3";

import "google/protobuf/timestamp.proto";

service User {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  int32 status_code = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  int32 status_code = 1;
}